--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -118,14 +118,17 @@ cc_inspect_values(
 )
 
 ################################# external source code ################################
-
-
+if(CC_EDITOR)
+    set(USE_SE_V8 OFF)
+endif()
 if(NOT EXISTS ${CMAKE_CURRENT_LIST_DIR}/external/CMakeLists.txt)
     message(FATAL_ERROR "Please download external libraries! File ${CMAKE_CURRENT_LIST_DIR}/external/CMakeLists.txt not exists!")
 endif()
 
 include(${CMAKE_CURRENT_LIST_DIR}/external/CMakeLists.txt)
-
+if(CC_EDITOR)
+    set(USE_SE_V8 ON)
+endif()
 ##### audio
 if(USE_AUDIO)
     cocos_source_files(
